style header mobile version

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
       </div>
       <div class="background--great-blue">
         <div class="outer-container">
-          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="float--left navigation-logo">
-            <img src="/images/EiG_logo_horizontal.svg" alt="Exporting is great logo">
+          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="float--left">
+            <img src="/images/EiG_logo_horizontal.svg" alt="Exporting is great logo" class="navigation-logo">
           </a>
         </div>
       </div>
@@ -47,20 +47,20 @@
           <button class="button navigation-main-button font-white" title=""><i class="icon icon-menu"></i>All</button>
         </div>
         <div class="navigation-toggle background--dark-navy">
-          <div class="outer-container soft">
-            <ul class="col-4 soft-half--left">
-              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="push-half--bottom">New to exporting</a></li>
-              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="push-half--bottom">Occasional exporter</a></li>
-              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="push-half--bottom">Regular exporter</a></li>
+          <div class="outer-container">
+            <ul class="col-4">
+              <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/">New to exporting</a></li>
+              <li class="navigation-toggle-item navigation-toggle-services"><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/">Occasional exporter</a></li>
+              <li class="navigation-toggle-item navigation-toggle-services"><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="last">Regular exporter</a></li>
             </ul>
-            <ul class="col-4 footer-middle-section soft--left">
-              <li class="soft--left"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="push-half--bottom">Export opportunities</a></li>
-              <li class="soft--left"><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="push-half--bottom">Find a buyer</a></li>
-              <li class="soft--left"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="push-half--bottom">Selling online overseas</a></li>
+            <ul class="col-4 navigation-toggle-middle">
+              <li class="navigation-toggle-item"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
+              <li class="navigation-toggle-item"><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
+              <li class="navigation-toggle-item"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
             </ul>
             <ul class="col-4">
-              <li class="soft--left"><a href="" title="UK Export Finance" class="push-half--bottom">UK Export Finance</a></li>
-              <li class="soft--left"><a href="https://events.trade.gov.uk/" title="Export Events" class="push-half--bottom">Export events</a></li>
+              <li class="navigation-toggle-item"><a href="" title="UK Export Finance">UK Export Finance</a></li>
+              <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Export Events" class="last">Export events</a></li>
             </ul>
           </div>
         </div>
@@ -238,57 +238,57 @@
     </div>
   </main>
 
-  <footer role="contentinfo">
-    <div class="footer background--great-blue soft--top">
-        <div class="outer-container soft--ends">
-          <div class="col-4">
-            <a href="https://www.exportingisgreat.gov.uk/" title="Go to the Exporting is Great homepage">
-              <img src="/images/EiG-logo-stacked.svg" alt="Exporting is Great logo" class="footer-logo">
-            </a>
-          </div>
+  <!--<footer role="contentinfo">-->
+    <!--<div class="footer background&#45;&#45;great-blue soft&#45;&#45;top">-->
+        <!--<div class="outer-container soft&#45;&#45;ends">-->
+          <!--<div class="col-4">-->
+            <!--<a href="https://www.exportingisgreat.gov.uk/" title="Go to the Exporting is Great homepage">-->
+              <!--<img src="/images/EiG-logo-stacked.svg" alt="Exporting is Great logo" class="footer-logo">-->
+            <!--</a>-->
+          <!--</div>-->
 
-          <div class="col-2">
-            <ul class="footer-links">
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/new/" title="New to exporting">New to exporting</a></li>
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/occasional/" title="Occasional exporter">Occasional exporter</a></li>
-              <li><a href="https://www.exportingisgreat.gov.uk/regular/" title="Regular exporter">Regular exporter</a></li>
-            </ul>
-          </div>
+          <!--<div class="col-2">-->
+            <!--<ul class="footer-links">-->
+              <!--<li class="push-half&#45;&#45;bottom"><a href="https://www.exportingisgreat.gov.uk/new/" title="New to exporting">New to exporting</a></li>-->
+              <!--<li class="push-half&#45;&#45;bottom"><a href="https://www.exportingisgreat.gov.uk/occasional/" title="Occasional exporter">Occasional exporter</a></li>-->
+              <!--<li><a href="https://www.exportingisgreat.gov.uk/regular/" title="Regular exporter">Regular exporter</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
 
-          <div class="col-3 footer-middle-section soft--left">
-            <ul class=" footer-links soft--left">
-              <li class="push-half--bottom soft--left"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
-              <li class="push-half--bottom soft--left"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
-              <li class="push-half--bottom soft--left"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-              <li class="push-half--bottom soft--left"><a href="" title="UK Export Finance">UK Export Finance</a></li>
-              <li class="soft--left"><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>
-            </ul>
-          </div>
+          <!--<div class="col-3 footer-middle-section soft&#45;&#45;left">-->
+            <!--<ul class=" footer-links soft&#45;&#45;left">-->
+              <!--<li class="push-half&#45;&#45;bottom soft&#45;&#45;left"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>-->
+              <!--<li class="push-half&#45;&#45;bottom soft&#45;&#45;left"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>-->
+              <!--<li class="push-half&#45;&#45;bottom soft&#45;&#45;left"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>-->
+              <!--<li class="push-half&#45;&#45;bottom soft&#45;&#45;left"><a href="" title="UK Export Finance">UK Export Finance</a></li>-->
+              <!--<li class="soft&#45;&#45;left"><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
 
-          <div class="col-3 soft--left">
-            <ul class="footer-links soft--left">
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
-              <li class="push-half--bottom"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us">Contact us</a></li>
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/privacy-and-cookies/" title="Privacy and Cookies">Privacy &amp; cookies</a></li>
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/terms-and-conditions/" title="Terms and conditions">Terms &amp; conditions</a></li>
-              <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" title="Department for International Trade">Department for International Trade</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="navigation outer-container soft--ends">
-          <hr class="push--top white">
-          <div class="navigation-strip col-6 soft-half--top">
-            <ul class="list-inline list-separators">
-              <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-              <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
-            </ul>
-          </div>
-          <div class="col-6 text--right font-light-grey font-xsmall soft-half--top">
-            <p>&copy Crown copyright 2017. All rights reserved.</p>
-          </div>
-        </div>
-    </div>
-  </footer>
+          <!--<div class="col-3 soft&#45;&#45;left">-->
+            <!--<ul class="footer-links soft&#45;&#45;left">-->
+              <!--<li class="push-half&#45;&#45;bottom"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>-->
+              <!--<li class="push-half&#45;&#45;bottom"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us">Contact us</a></li>-->
+              <!--<li class="push-half&#45;&#45;bottom"><a href="https://www.exportingisgreat.gov.uk/privacy-and-cookies/" title="Privacy and Cookies">Privacy &amp; cookies</a></li>-->
+              <!--<li class="push-half&#45;&#45;bottom"><a href="https://www.exportingisgreat.gov.uk/terms-and-conditions/" title="Terms and conditions">Terms &amp; conditions</a></li>-->
+              <!--<li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" title="Department for International Trade">Department for International Trade</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="navigation outer-container soft&#45;&#45;ends">-->
+          <!--<hr class="push&#45;&#45;top white">-->
+          <!--<div class="navigation-strip col-6 soft-half&#45;&#45;top">-->
+            <!--<ul class="list-inline list-separators">-->
+              <!--<li class="float&#45;&#45;left soft&#45;&#45;right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>-->
+              <!--<li class="float&#45;&#45;left soft&#45;&#45;left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
+          <!--<div class="col-6 text&#45;&#45;right font-light-grey font-xsmall soft-half&#45;&#45;top">-->
+            <!--<p>&copy Crown copyright 2017. All rights reserved.</p>-->
+          <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+  <!--</footer>-->
   <script src="js/jquery.js"></script>
   <script src="js/navigation.js"></script>
 
