style footer mobile

--- a/public/index.html
+++ b/public/index.html
@@ -240,51 +240,57 @@
 
   <footer role="contentinfo">
     <div class="footer background--great-blue soft--top">
-        <div class="outer-container soft--ends">
-          <div class="col-4">
-            <a href="https://www.exportingisgreat.gov.uk/" title="Go to the Exporting is Great homepage">
-              <img src="/images/EiG-logo-stacked.svg" alt="Exporting is Great logo" class="footer-logo">
-            </a>
+        <div class="outer-container">
+          <div class="footer-section">
+            <div class="col-8">
+              <a href="https://www.exportingisgreat.gov.uk/" title="Go to the Exporting is Great homepage">
+                <img src="/images/EiG-logo-stacked.svg" alt="Exporting is Great logo" class="footer-logo">
+              </a>
+            </div>
+
+            <div class="col-4">
+              <ul class="footer-links footer-links--border">
+                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/new/" title="New to exporting">New to exporting</a></li>
+                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/occasional/" title="Occasional exporter">Occasional exporter</a></li>
+                <li><a href="https://www.exportingisgreat.gov.uk/regular/" title="Regular exporter">Regular exporter</a></li>
+              </ul>
+            </div>
           </div>
 
-          <div class="col-2">
-            <ul class="footer-links">
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/new/" title="New to exporting">New to exporting</a></li>
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/occasional/" title="Occasional exporter">Occasional exporter</a></li>
-              <li><a href="https://www.exportingisgreat.gov.uk/regular/" title="Regular exporter">Regular exporter</a></li>
-            </ul>
-          </div>
+          <div class="footer-section footer-section-right">
 
-          <div class="col-3 footer-middle-section soft--left">
-            <ul class=" footer-links soft--left">
-              <li class="push-half--bottom soft--left"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
-              <li class="push-half--bottom soft--left"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
-              <li class="push-half--bottom soft--left"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-              <li class="push-half--bottom soft--left"><a href="" title="UK Export Finance">UK Export Finance</a></li>
-              <li class="soft--left"><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>
-            </ul>
-          </div>
+            <div class="col-6">
+              <ul class="footer-links footer-middle-section">
+                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
+                <li class="push-half--bottom"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
+                <li class="push-half--bottom"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
+                <li class="push-half--bottom"><a href="" title="UK Export Finance">UK Export Finance</a></li>
+                <li class=""><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>
+              </ul>
+            </div>
 
-          <div class="col-3 soft--left">
-            <ul class="footer-links soft--left">
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
-              <li class="push-half--bottom"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us">Contact us</a></li>
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/privacy-and-cookies/" title="Privacy and Cookies">Privacy &amp; cookies</a></li>
-              <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/terms-and-conditions/" title="Terms and conditions">Terms &amp; conditions</a></li>
-              <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" title="Department for International Trade">Department for International Trade</a></li>
-            </ul>
+            <div class="col-6">
+              <ul class="footer-links footer-links--border">
+                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
+                <li class="push-half--bottom"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us">Contact us</a></li>
+                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/privacy-and-cookies/" title="Privacy and Cookies">Privacy &amp; cookies</a></li>
+                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/terms-and-conditions/" title="Terms and conditions">Terms &amp; conditions</a></li>
+                <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" title="Department for International Trade">Department for International Trade</a></li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="navigation outer-container soft--ends">
-          <hr class="push--top white">
-          <div class="navigation-strip col-6 soft-half--top">
-            <ul class="list-inline list-separators">
-              <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-              <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of GREAT.gov.uk</a></li>
-            </ul>
-          </div>
-          <div class="col-6 text--right font-light-grey font-xsmall soft-half--top">
-            <p>&copy Crown copyright 2017. All rights reserved.</p>
+        <div class="outer-container">
+          <div class="footer-bottom">
+            <div class="navigation-strip">
+              <ul class="list-inline list-separators">
+                <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
+                <li class="float--left soft--left footer-links--border"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
+              </ul>
+            </div>
+            <div class="footer-copy font-light-grey font-xsmall">
+              <p>&copy Crown copyright 2017. All rights reserved.</p>
+            </div>
           </div>
         </div>
     </div>
