--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,11 @@
               <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link background--light-blue font-medium">New to exporting</a></li>
               <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link background--light-blue font-medium">Occasional exporter</a></li>
               <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link background--light-blue font-medium">Regular exporter</a></li>
-              <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link navigation-main-link--services">Export opportunities</a></li>
-              <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link navigation-main-link--services">Find a buyer</a></li>
-              <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--services  navigation-main-link--services--active">Selling online overseas</a></li>
-              <li><a href="" title="UK Export Finance" class="navigation-main-link navigation-main-link--services">UK Export Finance</a></li>
-              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link navigation-main-link--services">Export events</a></li>
+              <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link">Export opportunities</a></li>
+              <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link">Find a buyer</a></li>
+              <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--active">Selling online overseas</a></li>
+              <li><a href="" title="UK Export Finance" class="navigation-main-link">UK Export Finance</a></li>
+              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link">Export events</a></li>
             </ul>
           </nav>
           <button class="button navigation-main-button font-white" title=""><i class="icon icon-menu"></i>All</button>
@@ -49,7 +49,7 @@
         <div class="navigation-toggle background--dark-navy">
           <div class="outer-container">
             <ul class="col-4">
-              <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/">New to exporting</a></li>
+              <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-toggle-active">New to exporting</a></li>
               <li class="navigation-toggle-item navigation-toggle-services"><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/">Occasional exporter</a></li>
               <li class="navigation-toggle-item navigation-toggle-services"><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="last">Regular exporter</a></li>
             </ul>
@@ -81,6 +81,12 @@
     <h4 class="h4">This is a 18px heading</h4>
     <p>class <strong>(.h4)</strong></p>
     <hr>
+    <p><strong>This is a 18px paragraph.</strong></p>
+    <p class="font-large">Cupcake ipsum dolor sit amet cotton candy toffee chocolate bar. Carrot cake icing brownie jelly-o toffee gingerbread. Dessert apple pie cake soufflé dessert cake oat cake.</p>
+
+    <p class="font-large">Pastry pastry sweet dragée cupcake dessert donut. Bear claw soufflé sesame snaps cake bear claw gingerbread topping. Sesame snaps liquorice donut chocolate jujubes tootsie roll wafer biscuit. Muffin bonbon oat cake topping fruitcake macaroon.</p>
+    <p>class <strong>(.font-large)</strong></p>
+    <hr>
     <p><strong>This is a 16px paragraph.</strong></p>
     <p>Cupcake ipsum dolor sit amet cotton candy toffee chocolate bar. Carrot cake icing brownie jelly-o toffee gingerbread. Dessert apple pie cake soufflé dessert cake oat cake.</p>
 
@@ -91,12 +97,6 @@
     <p><strong>Pastry pastry sweet dragée cupcake dessert donut. Bear claw soufflé sesame snaps cake bear claw gingerbread topping. Sesame snaps liquorice donut chocolate jujubes tootsie roll wafer biscuit. Muffin bonbon oat cake topping fruitcake macaroon.</strong></p>
     <hr>
 
-    <p><strong>This is a 18px paragraph.</strong></p>
-    <p class="font-large">Cupcake ipsum dolor sit amet cotton candy toffee chocolate bar. Carrot cake icing brownie jelly-o toffee gingerbread. Dessert apple pie cake soufflé dessert cake oat cake.</p>
-
-    <p class="font-large">Pastry pastry sweet dragée cupcake dessert donut. Bear claw soufflé sesame snaps cake bear claw gingerbread topping. Sesame snaps liquorice donut chocolate jujubes tootsie roll wafer biscuit. Muffin bonbon oat cake topping fruitcake macaroon.</p>
-    <p>class <strong>(.font-large)</strong></p>
-    <hr>
 
     <a href="www.thisisalink.com" class="link">This is a link</a> <strong>(.link)</strong>
     <hr>
