activate the soo link

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <div class="outer-container">
           <ul class="list-inline list-separators">
             <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-            <li class="float--left soft--left"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
+            <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
           </ul>
         </div>
       </div>
@@ -44,23 +44,27 @@
               <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link">Export events</a></li>
             </ul>
           </nav>
-          <button class="button navigation-main-button font-white" title=""><i class="icon icon-menu"></i>All</button>
+          <a class="button navigation-main-button font-white" title=""><i class="icon icon-menu"></i>All</a>
         </div>
         <div class="navigation-toggle background--dark-navy">
           <div class="outer-container">
-            <ul class="col-4">
-              <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-toggle-active">New to exporting</a></li>
+            <ul class="col-3">
+              <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/">New to exporting</a></li>
               <li class="navigation-toggle-item navigation-toggle-services"><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/">Occasional exporter</a></li>
               <li class="navigation-toggle-item navigation-toggle-services"><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="last">Regular exporter</a></li>
             </ul>
-            <ul class="col-4 navigation-toggle-middle">
+            <ul class="col-3 navigation-toggle-middle">
               <li class="navigation-toggle-item"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
               <li class="navigation-toggle-item"><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
-              <li class="navigation-toggle-item"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
+              <li class="navigation-toggle-item"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-toggle-active">Selling online overseas</a></li>
             </ul>
-            <ul class="col-4">
+            <ul class="col-3 navigation-toggle-middle">
               <li class="navigation-toggle-item"><a href="" title="UK Export Finance">UK Export Finance</a></li>
-              <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Export Events" class="last">Export events</a></li>
+              <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Export Events">Export events</a></li>
+            </ul>
+            <ul class="col-3 navigation-toggle-middle">
+              <li class="navigation-toggle-item"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
+              <li class="navigation-toggle-item"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us" class="last">Contact us</a></li>
             </ul>
           </div>
         </div>
@@ -285,7 +289,7 @@
             <div class="navigation-strip">
               <ul class="list-inline list-separators">
                 <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-                <li class="float--left soft--left footer-links--border"><a class="" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
+                <li class="float--left soft--left footer-links--border"><a class="link--grey"  href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
               </ul>
             </div>
             <div class="footer-copy font-light-grey font-xsmall">
