--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
               <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link">Export events</a></li>
             </ul>
           </nav>
-          <a class="button navigation-main-button font-white" title=""><i class="icon icon-menu"></i>All</a>
+          <a class="button navigation-main-button font-white" title="" href=""><i class="icon icon-menu"></i>All</a>
         </div>
         <div class="navigation-toggle background--dark-navy">
           <div class="outer-container">
