--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html class="no-js" lang="">
+<!--[if IE 8]>    <html lang="en-us" class="ie8"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" class="ie8"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -301,6 +302,7 @@
   </footer>
   <script src="js/jquery.js"></script>
   <script src="js/navigation.js"></script>
+  <script src="js/ie8.js"></script>
 
 
 </body>
