Fix: Added selectivizr as (temporary) solution to lack of IE8 CSS support

--- a/public/index.html
+++ b/public/index.html
@@ -300,6 +300,9 @@
     </div>
   </footer>
   <script src="js/jquery.js"></script>
+  <!--[if IE 8]>
+  <script type="text/javascript" src="js/selectivizr.js"></script>
+  <![endif]-->
   <script src="js/navigation.js"></script>
 
 
