--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--[if IE 8]>    <html lang="en-us" class="ie8"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" class="ie8"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -20,7 +20,7 @@
         <div class="outer-container">
           <ul class="list-inline list-separators">
             <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-            <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
+            <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>Great.gov.uk</strong></a></li>
           </ul>
         </div>
       </div>
