--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,6 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/main.css">
-  <noscript>
-  	<style>
-  		.navigation-toggle {
-   			display: block;
-		}
-  	</style>
-  </noscript>
 </head>
 <body>
   <header role="banner">
@@ -301,7 +294,7 @@
               </ul>
             </div>
             <div class="footer-copy font-light-grey font-xsmall">
-              <p>&copy; Crown copyright 2017. All rights reserved.</p>
+              <p>&copy Crown copyright 2017. All rights reserved.</p>
             </div>
           </div>
         </div>
