Add: Non-JS view support for navigation

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/main.css">
+  <noscript>
+    <style>
+      .navigation-toggle {
+        display: block;
+      }
+    </style>
+  </noscript>
 </head>
 <body>
   <header role="banner">
