--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       <div class="navigation-strip background--dark-navy">
         <div class="outer-container">
           <ul class="list-inline list-separators">
-            <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
+            <li class="float--left soft--right"><a class="logo-hmg" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
             <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>Great.gov.uk</strong></a></li>
           </ul>
         </div>
@@ -296,7 +296,7 @@
           <div class="footer-bottom">
             <div class="navigation-strip">
               <ul class="list-inline list-separators">
-                <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
+                <li class="float--left soft--right"><a class="logo-hmg" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
                 <li class="float--left soft--left footer-links--border"><a class="link--grey"  href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
               </ul>
             </div>
