bug fix, header font-weight and text alignment

--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,9 @@
         <div class="navigation-main-section outer-container">
           <nav>
             <ul class="list-inline list-separators navigation-main-menu">
-              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link background--light-blue font-medium">New to exporting</a></li>
-              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link background--light-blue font-medium">Occasional exporter</a></li>
-              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link background--light-blue font-medium">Regular exporter</a></li>
+              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link background--light-blue font-regular">New to exporting</a></li>
+              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link background--light-blue font-regular">Occasional exporter</a></li>
+              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link background--light-blue font-regular">Regular exporter</a></li>
               <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link">Export opportunities</a></li>
               <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link">Find a buyer</a></li>
               <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--active">Selling online overseas</a></li>
