Fix: Focus outline of header logo clipping

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="background--great-blue">
         <div class="outer-container">
-          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="float--left">
+          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="navigation-logo-link float--left">
             <img src="/images/EiG_logo_horizontal.svg" alt="Exporting is great logo" class="navigation-logo">
           </a>
         </div>
