remove non script tag, display expanded menu without js

--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,6 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/main.css">
-  <noscript>
-    <style>
-      .navigation-toggle {
-        display: block;
-      }
-    </style>
-  </noscript>
 </head>
 <body>
   <header role="banner">
@@ -307,6 +300,7 @@
         </div>
     </div>
   </footer>
+  <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
   <script src="js/jquery.js"></script>
   <!--[if IE 8]>
   <script type="text/javascript" src="js/selectivizr.js"></script>
