content update and footer and header link hover state fix

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <div class="outer-container">
           <ul class="list-inline list-separators">
             <li class="float--left soft--right"><a class="logo-hmg" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-            <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>Great.gov.uk</strong></a></li>
+            <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>great.gov.uk</strong></a></li>
           </ul>
         </div>
       </div>
@@ -42,7 +42,7 @@
               <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link navigation-main-link--secondary">Find a buyer</a></li>
               <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--secondary navigation-main-link--active">Selling online overseas</a></li>
               <li><a href="" title="UK Export Finance" class="navigation-main-link navigation-main-link--secondary">UK Export Finance</a></li>
-              <li><a href="https://events.trade.gov.uk/" title="Export Events" class="navigation-main-link navigation-main-link--secondary">Export events</a></li>
+              <li><a href="https://events.trade.gov.uk/" title="Events" class="navigation-main-link navigation-main-link--secondary">Events</a></li>
             </ul>
           </nav>
           <a class="button navigation-main-button font-white" title="" href=""><i class="icon icon-menu"></i>All</a>
@@ -61,7 +61,7 @@
             </ul>
             <ul class="col-3 navigation-toggle-middle">
               <li class="navigation-toggle-item"><a href="" title="UK Export Finance">UK Export Finance</a></li>
-              <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Export Events">Export events</a></li>
+              <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Events">Events</a></li>
             </ul>
             <ul class="col-3 navigation-toggle-middle">
               <li class="navigation-toggle-item"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
@@ -270,7 +270,7 @@
                 <li class="push-half--bottom"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
                 <li class="push-half--bottom"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
                 <li class="push-half--bottom"><a href="" title="UK Export Finance">UK Export Finance</a></li>
-                <li class=""><a href="https://events.trade.gov.uk/" title="Exporting Events">Exporting Events</a></li>
+                <li class=""><a href="https://events.trade.gov.uk/" title="Exporting Events">Events</a></li>
               </ul>
             </div>
 
@@ -290,7 +290,7 @@
             <div class="navigation-strip">
               <ul class="list-inline list-separators">
                 <li class="float--left soft--right"><a class="logo-hmg" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-                <li class="float--left soft--left footer-links--border"><a class="link--grey"  href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>GREAT.gov.uk</strong></a></li>
+                <li class="float--left soft--left footer-links--border"><a class="link--grey"  href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>great.gov.uk</strong></a></li>
               </ul>
             </div>
             <div class="footer-copy font-light-grey font-xsmall">
