--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       <div class="navigation-strip background--dark-navy">
         <div class="outer-container">
           <ul class="list-inline list-separators">
+            <li class="float--left soft--right navigation-skip-to"><a class="link--grey" href="#content" title="Skip to main content"><strong>Skip to main content</strong></a></li>
             <li class="float--left soft--right"><a class="logo-hmg" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
             <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>great.gov.uk</strong></a></li>
           </ul>
@@ -73,7 +74,7 @@
     </div>
   </header>
 
-  <main class="outer-container">
+  <main class="outer-container" id="content">
     <h1 class="h1">This is a 48px heading</h1>
     <p>class<strong> (.h1)</strong></p>
     <hr>
